# SEMS

./: .gitignore  LICENSE  README.md
sems-esp/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults
sems-esp/main/: CMakeLists.txt  main.c  main.h
sems-esp/user_components/ble_prov/: CMakeLists.txt  ble_prov.c
sems-esp/user_components/ble_prov/inc/: ble_prov.h
sems-esp/user_components/common/: sems_def.h
sems-esp/user_components/ds18b20/: CMakeLists.txt  ds18b20.c
sems-esp/user_components/ds18b20/inc/: ds18b20.h
sems-esp/user_components/ntp/: CMakeLists.txt  ntp.c
sems-esp/user_components/ntp/inc/: ntp.h
sems-esp/user_components/sdcard/: CMakeLists.txt  sdcard.c
sems-esp/user_components/sdcard/inc/: sdcard.h
sems-esp/user_components/sqlite/: CMakeLists.txt  idf_component.yml  sqlite.c
sems-esp/user_components/sqlite/inc/: sqlite.h
sems-esp/user_components/websocket/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  web.c  web_client.c  web_prov.c  web_server.c
sems-esp/user_components/websocket/include/: web.h  web_prov.h
sems-esp/user_components/wifi_prov/: CMakeLists.txt  idf_component.yml  wifi_prov.c
sems-esp/user_components/wifi_prov/inc/: wifi_prov.h
